@@ -41,3 +41,6 @@ Creating cities
 Failed sanity check after setting up AI two-city start:
 At least two cities are located on adjacent tiles
 One or more AIs did not receive their second starting cities
+
+; Used in place of "Upgrades To" in the Civilopedia for unit types that cannot actually upgrade
+Obsoleted By
