@@ -27,6 +27,9 @@ disable_worker_automation = false
 
 suppress_hypertext_links_exceeded_popup = true
 
+; Replaces the text "Upgrades To" with "Obsoleted By" in the Civilopedia for unit types that go obsolete but cannot be upgraded to their successors.
+indicate_non_upgradability_in_pedia = true
+
 [=======================]
 [=== AI ENHANCEMENTS ===]
 [=======================]
